--- a/STSEval/app/templates/app/layout.html
+++ b/STSEval/app/templates/app/layout.html
@@ -18,7 +18,7 @@
                 <div class="row no-gutters w-100 align-items-center">
                     <div class="col-3">
                         <div>
-                            <img src="{% static 'app/images/stseval21.svg' %}" style="height:42px">
+                            <img src="{% static 'app/images/stslivegym-white.svg' %}" style="height:42px">
                         </div>
                     </div>
                     <div class="col-6" align="center">
