--- a/STSEval/app/templates/app/index.html
+++ b/STSEval/app/templates/app/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8" />
@@ -11,7 +11,7 @@
     </head>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid justify-content-center">
-            <img src="{% static 'app/images/stseval21.svg' %}" style="height:42px">
+            <img src="{% static 'app/images/stslivegym-white.svg' %}" style="height:42px">
         </div>
     </div>
     <div class="container-fluid body-content">
