--- a/STSEval/app/templates/app/evideo.html
+++ b/STSEval/app/templates/app/evideo.html
@@ -39,40 +39,42 @@
 	            </div>
 	        </td>
 	        <td align="left" style="vertical-align:top;">
-	            <div>
-	                <div id="divDotsAreaGlobal" style="position:relative;width:100px;height:100px;border-top:1px solid black;border-right:1px solid black;border-bottom:1px solid black;background-color:#373748;float:left">
+	            <div class="d-flex">
+                    <div>
+	                    <div id="divDotsAreaGlobal" style="position:relative;width:100px;height:100px;border-top:1px solid black;border-right:1px solid black;border-bottom:1px solid black;background-color:#373748">
 	   
-	                </div>
-	                <div id="divEJudges" align="left" style="float:left;padding-left:5px;padding-top:12px">
+	                    </div>
+	                    <div id="divEJudges" align="left" style="padding-left:5px;padding-top:12px">
 	   
-		                <div style="float:left">
-		                    <table cellspacing="0" border="0" cellpadding="0">
-			                    <tr>
-			                        <td id="divJT1" style="width:30px;font-weight:bold"></td>
-			                        <td id="divE1N"></td>
-			                    </tr>
-			                    <tr>
-			                        <td id="divJT2" style="width:30px;font-weight:bold"></td>
-			                        <td id="divE2N"></td>
-			                    </tr>
-			                    <tr>
-			                        <td id="divJT3" style="width:30px;font-weight:bold"></td>
-			                        <td id="divE3N"></td>
-			                    </tr>
-			                    <tr>
-			                        <td id="divJT4" style="width:30px;font-weight:bold"></td>
-			                        <td id="divE4N"></td>
-			                    </tr>
-		                    </table>
-		                </div>
-	                </div>
-	                <div style="float:right;padding-left:5px">
+		                    <div style="float:left">
+		                        <table cellspacing="0" border="0" cellpadding="0">
+			                        <tr>
+			                            <td id="divJT1" style="width:30px;font-weight:bold"></td>
+			                            <td id="divE1N"></td>
+			                        </tr>
+			                        <tr>
+			                            <td id="divJT2" style="width:30px;font-weight:bold"></td>
+			                            <td id="divE2N"></td>
+			                        </tr>
+			                        <tr>
+			                            <td id="divJT3" style="width:30px;font-weight:bold"></td>
+			                            <td id="divE3N"></td>
+			                        </tr>
+			                        <tr>
+			                            <td id="divJT4" style="width:30px;font-weight:bold"></td>
+			                            <td id="divE4N"></td>
+			                        </tr>
+		                        </table>
+		                    </div>
+	                    </div>
+	                    <div style="float:right;padding-left:5px">
 		               
+	                    </div>
+                    </div>
+                    <div style="padding-left:5px">
+	                    <button href="#" id="btnAccountability" type="button" class="btn btn-main mb-2 ui-disabled" onclick="ViewAccountabilityReport()">Accountability Report</button>
 	                </div>
-	            </div>
-                <div style="float:right;padding-left:5px">
-	                <button href="#" id="btnAccountability" type="button" class="btn btn-main mb-2 ui-disabled" onclick="ViewAccountabilityReport()">Accountability Report</button>
-	            </div>
+                </div>
             </td>
         </tr>
     </table> 
@@ -150,13 +152,19 @@
                 }
                 else
                     CheckJudges(doc);
-                console.log("Current data: ", doc.data());
+                
                 // $("#divStatus").html(doc.data().stream + " | " + doc.data().status);
             }
+            else
+                CheckJudges(doc);
+            console.log("Current data: ", doc.data());
         }
     }
-
-
+    function SetJudgesDone(statusIn) {
+        for (var i = 1; i <= 4; i++) {
+            EJudgesDone[i] = statusIn;
+        }
+    }
     function SetJudges() {
         NumJudges = 0;
         for (var i = 1; i <= 4; i++) {
@@ -199,6 +207,7 @@
         $("#divTotalScore").html('');
         $("#btnAccountability").addClass("ui-disabled");
         SetJudges();
+        SetJudgesDone(false);
     }
 
     function CheckJudges(doc) {
