--- a/STSEval/app/templates/app/dots_area.html
+++ b/STSEval/app/templates/app/dots_area.html
@@ -3,13 +3,13 @@
     <div id="divVP1" style="border-right:1px solid;position:absolute;left:25%;height:100%;width:1px"></div><div id="divVP2" style="border-right:1px solid;position:absolute;left:50%;height:100%;width:1px"></div><div id="divVP3" style="border-right:1px solid;position:absolute;left:75%;height:100%;width:1px"></div>
 {% endif %}
 {% for deduction in deductions %}
-    <img id='imgDot{{deduction.id}}' src='{% static 'app/images/dots/' %}{{deduction.image}}' width='{{dot_size}}' height='{{dot_size}}' style='position:absolute;top:{{deduction.posy}}px;left:{{deduction.posx}}px;opacity:{{deduction.opacity}}' onclick='ChangeEjury({{deduction.id}});event.stopPropagation();'>
+    <img id='imgDot{{deduction.id}}' src='{% static 'app/images/dots/' %}{{deduction.image}}' width='{{dot_size}}' height='{{dot_size}}' style='position:absolute;top:{{deduction.posy}}px;left:{{deduction.posx}}px;opacity:{{deduction.opacity}}' onclick='{% if deduction.opacity == 1 %}ChangeEjury({{deduction.id}});{% endif %}event.stopPropagation();'>
 {% endfor %}
 
 {% if artistry_deductions|length > 0 %}
     <div id="divArtistryDeductions" style="display:none">
         {% for deduction in artistry_deductions %}
-            <img id='imgDot{{deduction.id}}' src='{% static 'app/images/dots/' %}{{deduction.image}}' width='{{dot_size}}' height='{{dot_size}}' style='position:absolute;top:{{deduction.posy}}px;left:{{deduction.posx}}px;opacity:{{deduction.opacity}}' onclick='ChangeEjury({{deduction.id}});event.stopPropagation();'>
+            <img id='imgDot{{deduction.id}}' src='{% static 'app/images/dots/' %}{{deduction.image}}' width='{{dot_size}}' height='{{dot_size}}' style='position:absolute;top:{{deduction.posy}}px;left:{{deduction.posx}}px;opacity:{{deduction.opacity}}' onclick='{% if deduction.opacity == 1 %}ChangeEjury({{deduction.id}});{% endif %}event.stopPropagation();'>
         {% endfor %}
     </div>
 {% endif %}
