--- a/STSEval/app/templates/app/judge_select.html
+++ b/STSEval/app/templates/app/judge_select.html
@@ -63,6 +63,8 @@
                 <button href="#" id="btnD1Overview" type="button" class="btn btn-main" onclick="Login('d1')">D1</button>
 			    <br/><br/>
                 <button href="#" id="btnScoreBoard"   type="button" class="btn btn-main"  onclick="Login('scoreboard')">Scoreboard</button>
+                 <br/><br/>
+                <button href="#" id="btnCamera"   type="button" class="btn btn-main"  onclick="Login('streaming/camera')">Camera</button>
             </div>
             <div style="float:left;width:126px"> 
               <button href="#" id="btnE1"   type="button" class="btn btn-main mb-2"  onclick="Login('ejudge1')">E1</button><br/>
