--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -248,9 +248,26 @@ input[type="checkbox"].input-validation-error {
 #publisher-video {
     width: 100% !important;
     height: auto !important;
-    background: #EEEEEE;
+    /*background: #EEEEEE;*/
     border-radius: 10px;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
+}
+
+#video-live-indicator {
+    position: absolute;
+    top: 0.5em;
+    left: 1.5em;
+    opacity: 90%;
+}
+
+.video-controls {
+    width: 100% !important;
+    position: relative;
+    bottom: 40px;
+    margin: 0;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+    border-radius: 10px;
+    padding-bottom: 5px;
 }
