--- a/STSEval/app/templates/app/layout.html
+++ b/STSEval/app/templates/app/layout.html
@@ -18,7 +18,7 @@
                 <div class="row no-gutters w-100 align-items-center">
                     <div class="col-3">
                         <div>
-                            <img src="{% static 'app/images/stslivegym-white.svg' %}" style="height:42px">
+                            <img src="{% static 'app/images/stslivegym-white.svg' %}" style="height:38px">
                         </div>
                     </div>
                     <div class="col-6" align="center">
@@ -28,7 +28,7 @@
                     </div>
                     <div class="col-3" align="right">
                         <ul class="nav navbar-nav ml-auto justify-content-end">
-                             <li class="nav-item dropdown">
+                             <!--<li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     {{event|upper}}
                                 </a>
@@ -40,7 +40,7 @@
                                     <a class="dropdown-item" onclick="EventChanged('PB')">PB</a>
                                     <a class="dropdown-item" onclick="EventChanged('HB')">HB</a>
                                 </div>
-                            </li>
+                            </li>-->
                             <li class="nav-item align-self-center"><a href="/">logout</a></li>
                         </ul>
                     </div>
