--- a/STSEval/app/templates/app/camera.html
+++ b/STSEval/app/templates/app/camera.html
@@ -52,13 +52,15 @@
             <div id="video-controls" class="video-controls">
                 <button id="publish-toggle" type="button" class="btn btn-main">Start</button>
             </div>
-                 <div class="form-group">
-                    <label for="camera-list-select">
-                    Camera
-                    </label>
-                    <select id="camera-list-select" class="form-control">
-                    </select>
+            <div class="form-group">
+                <label for="videoBitrate">Video Bitrate</label>
+                <div class="input-group justify-content-center">
+                <input type="number" class="form-control" id="videoBitrate" name="videoBitrate" value="3500">
+                <div class="input-group-append">
+                    <span class="input-group-text">Kbps</span>
                 </div>
+                </div>
+            </div>    
             </div>
         </div>
         <div class="col-md-4 col-sm-12" id="publish-settings" style="display:none">
@@ -172,7 +174,13 @@
             </div>
             <div class="row">
                 <div class="col-10">
-                
+                <div class="form-group">
+                    <label for="camera-list-select">
+                    Camera
+                    </label>
+                    <select id="camera-list-select" class="form-control">
+                    </select>
+                </div>
                 </div>
                 <div class="col-2">
                 <button id="camera-toggle" class="control-button">
