--- a/STSEval/app/templates/app/evideo.html
+++ b/STSEval/app/templates/app/evideo.html
@@ -95,7 +95,7 @@
 {% block scripts %}
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
 <script src="{% static 'app/scripts/dots_area.js' %}?v=1"></script>
-<script type="module" src="{% static 'app/scripts/wowza/play.js' %}"></script>
+<script type="module" src="{% static 'app/scripts/wowza/play.js' %}?v=1"></script>
 <script type="text/javascript">
     var Disc = "{{disc}}";
     var ev = "{{event}}";
