--- a/STSEval/app/templates/app/evideo.html
+++ b/STSEval/app/templates/app/evideo.html
@@ -10,7 +10,7 @@
         <tr>
             <td>
                 <!--<div id="divTwitchPlayer" style="width:854px;height:480px"></div>-->
-                <div id="play-video-container" style="width:854px;min-height:480px">
+                <div id="play-video-container" style="width:854px;min-height:480px;max-height:720px">
                             <video id="player-video" autoplay playsinline muted controls></video>
                         </div>
             </td>
