--- a/STSEval/app/templates/app/ejudge.html
+++ b/STSEval/app/templates/app/ejudge.html
@@ -118,6 +118,7 @@
     var Status = "";
     var TotalDeductions = 0;
     var JudgeType = 'E';
+    var EditableDots = true;
 
     DotSize = 36;
     OnlyOneJudge = true;
